# DeskGap

./: Cargo.toml
chairgap/: Cargo.toml
chairgap/cef/: Cargo.toml
chairgap/cef/binding/: Cargo.toml  build.rs
chairgap/cef/binding/src/: application.h  application.mm  browser.cc  browser.h  index.h  init.cc  init.h  lib.rs
chairgap/cef/macos_src/: Cargo.toml  build.rs
chairgap/cef/macos_src/src/: application.mm  lib.rs
chairgap/cef/src/: lib.rs  strings.rs
chairgap/cef/sys/: Cargo.toml  build.rs
chairgap/cef/sys/src/: bindings_mac.rs  lib.rs
chairgap/cef/sys/src/mac/: application.mm
chairgap/cef/wrapper/: Cargo.toml  build.rs
chairgap/cef/wrapper/src/: lib.rs
chairgap/cef/wrapper/src/include/wrapper/: cef_library_loader.h
chairgap/cef/wrapper/src/libcef_dll/wrapper/: libcef_dll_dylib.cc
chairgap/common/: Cargo.toml
chairgap/common/src/: app.rs  engine.rs  geo.rs  lib.rs  web_view.rs  window.rs
chairgap/examples/: hello_world.rs
chairgap/macos/: Cargo.toml
chairgap/macos/macos_src/: Cargo.toml  build.rs
chairgap/macos/macos_src/src/: DGWindowController.m  app.h  app.m  geo.h  geo_utils.h  index.h  lib.rs  menu.h  menu.m  object.h  object.m  string.h  string_utils.h  web_view.h  web_view.m  window.h
chairgap/macos/src/: app.rs  convert.rs  debug.rs  lib.rs  strings.rs  window.rs
chairgap/src/: app.rs  fn_utils.rs  lib.rs  menu.rs  test_utils.rs  webview.rs  window.rs
chairgap/src/platform/: mod.rs
chairgap/src/platform/appkit/: geo.rs  menu.rs  mod.rs  preload.js  webview.rs
chairgap/src/platform/common/: menu.rs  mod.rs  webview.rs  window.rs
