[package]
name = "chairgap"
version = "0.1.0"
authors = ["patr0nus <dk4rest@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
take_mut = "0.2"
once_cell = "1.5"
percent-encoding = "2"
chairgap_common = { path = "./common" }
chairgap_cef = { path = "./cef" }

[target.'cfg(target_os = "macos")'.dependencies]
chairgap_macos = { path = "./macos" }
