[package]
name = "chairgap_macos_src"
version = "0.1.0"
authors = ["patr0nus <dk4rest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = "0.2"
block = "0.1"

[build-dependencies]
cc = "1.0"
bindgen = "0.55"
